--- a/build.xml
+++ b/build.xml
@@ -92,4 +92,11 @@
     </target>
 
     <target name="zip-all" depends="zip-bin,zip-src"/>
+
+    <target name="exe" depends="clean,jar" if="launch4j.dir">
+        <taskdef name="launch4j"
+                classname="net.sf.launch4j.ant.Launch4jTask"
+                classpath="${launch4j.dir}/launch4j.jar:${launch4j.dir}/lib/xstream.jar" />
+        <launch4j configFile="launch4j.xml" />
+    </target>
 </project>
