--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,10 +35,11 @@ javac.classpath=\
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint:unchecked -Xlint:deprecation
 javac.deprecation=true
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.6
-javac.target=1.6
+javac.source=1.7
+javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
@@ -69,6 +70,7 @@ run.jvmargs=
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
+source.encoding=UTF-8
 src.dir=src
 src.resources.dir=resources
 test.src.dir=test
