--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,76 +1,63 @@
-annotation.processing.enabled=true
-annotation.processing.enabled.in.editor=false
-annotation.processing.processors.list=
-annotation.processing.run.all.processors=true
-application.args=
-application.title=minica
-application.vendor=perrym
-build.classes.dir=${build.dir}/classes
-build.classes.excludes=**/*.java,**/*.form
-# This directory is removed when the project is cleaned:
-build.dir=build
-build.generated.dir=${build.dir}/generated
-build.generated.sources.dir=${build.dir}/generated-sources
-# Only compile against the classpath explicitly listed here:
-build.sysclasspath=ignore
-build.test.classes.dir=${build.dir}/test/classes
-build.test.results.dir=${build.dir}/test/results
-debug.classpath=\
-    ${run.classpath}
-debug.test.classpath=\
-    ${run.test.classpath}
-# This directory is removed when the project is cleaned:
-dist.dir=dist
-dist.jar=${dist.dir}/minica.jar
-dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=
+#Thu Sep 28 14:05:28 CEST 2017
 excludes=
-file.reference.bcmail-jdk16-146.jar=lib/bcmail-jdk16-146.jar
-file.reference.bcprov-jdk16-146.jar=lib/bcprov-jdk16-146.jar
-includes=**
-jar.compress=false
-javac.classpath=\
-    ${file.reference.bcmail-jdk16-146.jar}:\
-    ${file.reference.bcprov-jdk16-146.jar}
-# Space-separated list of extra javac options
-javac.compilerargs=-Xlint:unchecked -Xlint:deprecation
 javac.deprecation=true
+build.test.results.dir=${build.dir}/test/results
+run.classpath=${javac.classpath}\:${build.classes.dir}
+javadoc.nonavbar=false
 javac.external.vm=false
-javac.processorpath=\
-    ${javac.classpath}
-javac.source=1.7
+run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+javac.processorpath=${javac.classpath}
+file.reference.bcmail-jdk16-146.jar=lib/bcmail-jdk16-146.jar
 javac.target=1.7
+annotation.processing.processors.list=
+javadoc.noindex=false
+javadoc.additionalparam=
+includes=**
+build.classes.dir=${build.dir}/classes
+source.encoding=UTF-8
+javadoc.author=false
+test.src.dir=test
+build.dir=build
+src.resources.dir=resources
+build.test.classes.dir=${build.dir}/test/classes
+platform.active=default_platform
+javac.compilerargs=-Xlint\:unchecked -Xlint\:deprecation
+main.class=org.tastefuljava.minica.Main
+dist.jar=${dist.dir}/minica.jar
+javadoc.use=true
+build.sysclasspath=ignore
+debug.test.classpath=${run.test.classpath}
+dist.dir=dist
+build.classes.excludes=**/*.java,**/*.form
+javadoc.splitindex=true
+javadoc.encoding=
+javac.source=1.7
+application.vendor=perrym
+junit.selected.version=3
+debug.classpath=${run.classpath}
+run.jvmargs=
+build.generated.dir=${build.dir}/generated
+jar.compress=false
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit.classpath}
-javadoc.additionalparam=
-javadoc.author=false
-javadoc.encoding=
-javadoc.noindex=false
-javadoc.nonavbar=false
-javadoc.notree=false
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
 javadoc.private=false
-javadoc.splitindex=true
-javadoc.use=true
+file.reference.bcprov-jdk16-146.jar=lib/bcprov-jdk16-146.jar
+annotation.processing.run.all.processors=true
+application.title=minica
+meta.inf.dir=${src.dir}/META-INF
+manifest.file=manifest.mf
+annotation.processing.enabled=true
+dist.javadoc.dir=${dist.dir}/javadoc
+src.dir=src
+mkdist.disabled=false
+endorsed.classpath=
+javac.classpath=${file.reference.bcmail-jdk16-146.jar}\:${file.reference.bcprov-jdk16-146.jar}
+annotation.processing.enabled.in.editor=false
+build.generated.sources.dir=${build.dir}/generated-sources
+application.args=
 javadoc.version=false
 javadoc.windowtitle=
-main.class=org.tastefuljava.minica.Main
-manifest.file=manifest.mf
-meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=false
-platform.active=default_platform
-run.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}
-# Space-separated list of JVM arguments used when running the project
-# (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
-# or test-sys-prop.name=value to set system properties for unit tests):
-run.jvmargs=
-run.test.classpath=\
-    ${javac.test.classpath}:\
-    ${build.test.classes.dir}
-source.encoding=UTF-8
-src.dir=src
-src.resources.dir=resources
-test.src.dir=test
+javadoc.notree=false
