--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,13 +1,19 @@
 #Thu Sep 28 14:05:28 CEST 2017
 excludes=
+file.reference.bcpkix-jdk15on-158.jar=S:\\UO5269\\13_GINA\\09-Referentiel\\lib-ext\\bountycastle\\V1.58\\bcpkix-jdk15on-158.jar
+file.reference.bcprov-jdk15on-158.jar=S:\\UO5269\\13_GINA\\09-Referentiel\\lib-ext\\bountycastle\\V1.58\\bcprov-jdk15on-158.jar
 javac.deprecation=true
 build.test.results.dir=${build.dir}/test/results
-run.classpath=${javac.classpath}\:${build.classes.dir}
+run.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}
 javadoc.nonavbar=false
 javac.external.vm=false
-run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
-javac.processorpath=${javac.classpath}
-file.reference.bcmail-jdk16-146.jar=lib/bcmail-jdk16-146.jar
+run.test.classpath=\
+    ${javac.test.classpath}:\
+    ${build.test.classes.dir}
+javac.processorpath=\
+    ${javac.classpath}
 javac.target=1.7
 annotation.processing.processors.list=
 javadoc.noindex=false
@@ -44,7 +50,6 @@ javac.test.classpath=\
     ${libs.junit_4.classpath}:\
     ${libs.hamcrest.classpath}
 javadoc.private=false
-file.reference.bcprov-jdk16-146.jar=lib/bcprov-jdk16-146.jar
 annotation.processing.run.all.processors=true
 application.title=minica
 meta.inf.dir=${src.dir}/META-INF
@@ -54,7 +59,9 @@ dist.javadoc.dir=${dist.dir}/javadoc
 src.dir=src
 mkdist.disabled=false
 endorsed.classpath=
-javac.classpath=${file.reference.bcmail-jdk16-146.jar}\:${file.reference.bcprov-jdk16-146.jar}
+javac.classpath=\
+    ${file.reference.bcprov-jdk15on-158.jar}:\
+    ${file.reference.bcpkix-jdk15on-158.jar}
 annotation.processing.enabled.in.editor=false
 build.generated.sources.dir=${build.dir}/generated-sources
 application.args=
