--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,7 +1,7 @@
 #Thu Sep 28 14:05:28 CEST 2017
 excludes=
-file.reference.bcpkix-jdk15on-158.jar=S:\\UO5269\\13_GINA\\09-Referentiel\\lib-ext\\bountycastle\\V1.58\\bcpkix-jdk15on-158.jar
-file.reference.bcprov-jdk15on-158.jar=S:\\UO5269\\13_GINA\\09-Referentiel\\lib-ext\\bountycastle\\V1.58\\bcprov-jdk15on-158.jar
+file.reference.bcpkix-jdk15on-158.jar=lib/bcpkix-jdk15on-158.jar
+file.reference.bcprov-jdk15on-158.jar=lib/bcprov-jdk15on-158.jar
 javac.deprecation=true
 build.test.results.dir=${build.dir}/test/results
 run.classpath=\
@@ -60,8 +60,8 @@ src.dir=src
 mkdist.disabled=false
 endorsed.classpath=
 javac.classpath=\
-    ${file.reference.bcprov-jdk15on-158.jar}:\
-    ${file.reference.bcpkix-jdk15on-158.jar}
+    ${file.reference.bcpkix-jdk15on-158.jar}:\
+    ${file.reference.bcprov-jdk15on-158.jar}
 annotation.processing.enabled.in.editor=false
 build.generated.sources.dir=${build.dir}/generated-sources
 application.args=
